Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -141,74 +141,59 @@ Si encuentras este proyecto interesante, no lo dudes, **¡súmate!**
 </nav>
 
 <section class="section hero is-bold is-small">
-  <div class="hero-header is-narrow">
 
+  <div class="hero-header">
 		<div class="container">
-			<img src="images/logo-desconexionibex35.svg">
+			<img src="/images/logo-desconexionibex35.svg">
 		</div>
-
 	</div>
 	<div class="container">
 		<div class="columns is-centered is-multiline">
-
 			<div class="column">
 				<div class="box has-background-light">
 					<h1 class="title">Desconecta</h1>
 					<h1 class="subtitle">Deja de alimentar a la bestia</h1>
-					<p class="block">
-						El IBEX y las grandes empresas perjudican
-						a la ciudadania y al medioambiente,
-						por eso no queremos nutrirles con nuestro dinero.
-					</p>
-					<div class="button is-info has-icon-left">
+					<p class="block">El IBEX y las grandes empresas perjudican a la ciudadania, a la economía y al medioambiente. Por eso, queremos dejar de nutrirles con nuestro dinero.</p>
+					<a
+						class="button has-icon-left is-info"
+						href=
+					>
 						Los motivos &nbsp;
 						<span class="icon"><i class="fas fa-angle-right"></i></span>
-					</div>
+					</a>
 				</div>
 			</div>
-
 			<div class="column">
 				<div class="box has-background-light">
-					<h1 class="title">
-						Campaña
-					</h1>
-					<p class="subtitle">
-						¿Qué hacemos?
-					</p>
-					<p class="block">
-						Buscamos alternativas a las grandes empresas.
-						Las difundimos y las facilitamos, acompañandonos en el tránsito.
-						Si no existen, fomentamos su creación.
-					</p>
-					<div class="button is-success has-icon-left">
+					<h1 class="title">Campaña</h1>
+					<h1 class="subtitle">Qué hacemos</h1>
+					<p class="block">Buscamos alternativas a las grandes empresas. Las difundimos y las facilitamos, acompañandonos en el tránsito. Si no existen, fomentamos su creación.</p>
+					<a
+						class="button has-icon-left is-success"
+						href=
+					>
 						Colabora &nbsp;
 						<span class="icon"><i class="fas fa-angle-right"></i></span>
-					</div>
+					</a>
 				</div>
 			</div>
-
 			<div class="column">
 				<div class="box has-background-light">
-					<h1 class="title">
-						Alternativas
-					</h1>
-					<p class="subtitle">
-						Por sectores
-					</p>
-					<p class="block">
-						De cada sector presentamos varias alternativas
-						para que cada persona encuentre la vía de desconexión que más le funcione,
-						explicando sus bondades y inconvenientes.
-					</p>
-					<div class="button is-danger has-icon-left">
-						Descubrelas &nbsp;
+					<h1 class="title">Alternativas</h1>
+					<h1 class="subtitle">Por sectores</h1>
+					<p class="block">De cada sector presentamos varias alternativas para que cada persona encuentre la vía de desconexión que más le funcione, explicando sus bondades y inconvenientes.</p>
+					<a
+						class="button has-icon-left is-danger"
+						href=
+					>
+						Descúbrelas &nbsp;
 						<span class="icon"><i class="fas fa-angle-right"></i></span>
-					</div>
+					</a>
 				</div>
 			</div>
-
 		</div>
 	</div>
+
 </section>
 
 <section class="section sectors has-background-info-light has-text-info">
